--- a/samples/zoom-log.html
+++ b/samples/zoom-log.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Scatter Chart</title>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.7"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.1"></script>
 	<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
 	<script src="../dist/chartjs-plugin-zoom.min.js"></script>
 
@@ -137,8 +137,7 @@
 
 	window.onload = function() {
 		var ctx = document.getElementById('canvas').getContext('2d');
-		window.myScatter = new window.Chart(ctx, {
-			type: 'scatter',
+		window.myScatter = window.Chart.Scatter(ctx, {
 			data: scatterChartData,
 			options: {
 				title: {
@@ -146,11 +145,11 @@
 					text: 'Chart.js Scatter Chart - Logarithmic X-Axis'
 				},
 				scales: {
-					x: {
+					xAxes: [{
 						type: 'logarithmic',
 						position: 'bottom',
 						ticks: {
-							callback: function(tick) {
+							userCallback: function(tick) {
 								var remain = tick / (Math.pow(10, Math.floor(window.Chart.helpers.log10(tick))));
 								if (remain === 1 || remain === 2 || remain === 5) {
 									return tick.toString() + 'Hz';
@@ -163,11 +162,11 @@
 							labelString: 'Frequency',
 							display: true,
 						},
-					},
-					y: {
+					}],
+					yAxes: [{
 						type: 'linear',
 						ticks: {
-							callback: function(tick) {
+							userCallback: function(tick) {
 								return tick.toFixed(0) + 'dB';
 							}
 						},
@@ -175,7 +174,7 @@
 							labelString: 'Voltage',
 							display: true
 						}
-					}
+					}]
 				},
 				plugins: {
 					zoom: {
