--- a/samples/pan-bar.html
+++ b/samples/pan-bar.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Bar Chart Pan</title>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.7"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.1"></script>
 	<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
 	<script src="../dist/chartjs-plugin-zoom.min.js"></script>
 
@@ -69,10 +69,12 @@
 						text: 'Chart.js Bar Chart'
 					},
 					scales: {
-						x: {
-							min: 'March',
-							max: 'August'
-						}
+						xAxes: [{
+							ticks: {
+								min: 'March',
+								max: 'August'
+							}
+						}]
 					},
 					plugins: {
 						zoom: {
